--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "vue": "^3.2.47",
+    "vue-3-slider-component": "^0.1.0",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.4"
+    "vuetify": "^3.1.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
